[package]
name = "optimum-server"
version = "0.1.0"
authors = ["b1temy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
rusqlite = "0.21"
geoutils = "0.4.0"
r2d2 = "0.8.2"
r2d2_sqlite = "0.14"

serde = { version = "1", features = ["derive"] }
